# Task_12

./: README.md  kinematics.docx
devel/: .catkin  _setup_util.py  local_setup.sh  setup.sh
devel/lib/pkgconfig/: miarobot_description.pc  my_package.pc  mypac.pc  pid_controller.pc  turtlebot_control.pc
devel/share/miarobot_description/cmake/: miarobot_descriptionConfig.cmake
devel/share/my_package/cmake/: my_packageConfig.cmake
devel/share/mypac/cmake/: mypacConfig.cmake
devel/share/pid_controller/cmake/: pid_controllerConfig.cmake
devel/share/turtlebot_control/cmake/: turtlebot_controlConfig.cmake
src/turtlebot_control/: CMakeLists.txt  package.xml
src/turtlebot_control/scripts/: turtlebot_node.py
